package com.bolt.common.command;

/**
 * @Author: wangxw
 * @DateTime: 2020/3/30
 * @Description: TODO
 */
public interface CommandCode {

    short getValue();
}
